--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -17,7 +17,7 @@
     <div class="field">
       <%= f.label :Mesas_disponibles %>
       <div style="color:black"> 
-        <%= f.collection_select :table_id, @tables, :id, :number, include_blank: true, :prompt => "Selecciona una mesa" %> 
+        <%= f.collection_select :table_id, @tables.order("number ASC"), :id, :number, include_blank: true, :prompt => "Selecciona una mesa" %> 
       </div>  
     </div>
   </div>
